<resources>
    <string name="app_name">RelativeLayout</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">Center</string>
    <string name="str_6">6</string>
    <string name="str_8">8</string>
    <string name="str_7">7</string>
    <string name="str_9">9</string>
</resources>
