<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aula_7.relativelayout.MainActivity">

    <!-- alinear a la izqueirda arriba -->
    <TextView
        android:id= "@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/str_1"
        android:background="@color/colorAccent"
        android:padding = "10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"

        />

    <!-- alinear al centro arriba -->
    <TextView
        android:id= "@+id/txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/str_2"
        android:background="@color/colorAccent"
        android:padding = "10dp"
        android:layout_centerHorizontal="true"
        />

    <!-- alinear a la derecha arriba -->
    <TextView
        android:id= "@+id/txt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/str_3"
        android:background="@color/colorAccent"
        android:padding = "10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        />

    <!-- alinear a la izquierda centro -->
    <TextView
        android:id= "@+id/txt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/str_4"
        android:background="@color/colorAccent"
        android:padding = "10dp"
        android:layout_centerVertical="true"
        />

    <!-- alinear al centro centro -->
    <TextView
        android:id= "@+id/txt_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/str_5"
        android:background="@color/colorAccent"
        android:padding = "10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <!-- alinear a la izqueirda centro -->
    <TextView
        android:id= "@+id/txt_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/str_6"
        android:background="@color/colorAccent"
        android:padding = "10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"



        />

    <!-- alinear a la izqueirda abajo -->
    <TextView
        android:id= "@+id/txt_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/str_7"
        android:background="@color/colorAccent"
        android:padding = "10dp"
        android:alig="true"
        android:layout_alignParentBottom="true"
        />

    <!-- alinear al centro abajo -->
    <TextView
        android:id= "@+id/txt_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/str_8"
        android:background="@color/colorAccent"
        android:padding = "10dp"
        android:alig="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        />

    <!-- alinear a la derecha abajo -->
    <TextView
        android:id= "@+id/txt_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/str_9"
        android:background="@color/colorAccent"
        android:padding = "10dp"
        android:alig="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />



</RelativeLayout>
